Fix vertical alignment of #omnibar-defaultEngineName

--- a/chrome/skin/default.css
+++ b/chrome/skin/default.css
@@ -11,14 +11,15 @@
   display: none;
   visibility: hidden;
   overflow: hidden !important;
-	padding: 0;
-  margin: 0 3px 0 3px;
+  padding: 0;
+  margin: 0 3px;
 }
 
 #omnibar-defaultEngineName {
   color: gray;
   padding: 0;
-  margin: 2px 3px 0 0;
+  margin: 0;
+  -moz-margin-end: 3px;
 }
 
 #omnibar-defaultEngine {
